--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "cd dist && cp index.html 404.html"
+    "deploy": "cd dist && copy index.html 404.html"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
