--- a/data/settings.json
+++ b/data/settings.json
@@ -4,13 +4,13 @@
         {
             "name": "English",
             "id": "en",
-            "flagUrl": "./images/flags/en.png"
+            "flagUrl": "/vue-resume/images/flags/en.png"
         },
 
         {
             "name": "中文",
             "id": "zh",
-            "flagUrl": "./images/flags/zh.png",
+            "flagUrl": "/vue-resume/images/flags/zh.png",
             "default": true
         }
     ],
